--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.36.1'
 }
 
 tasks.named('test') {
